--- a/index.html
+++ b/index.html
@@ -1,21 +1,12 @@
 <html>
 <head>
 	<script type=“text/javascript”>
-		window.onload = function() {
-		  SetAge();
-		};
-		
 		function SetAge()
 		{
 			window.external.Incident.SetCustomFieldByName(“c$age_test”, 'test js');
 			return;
 		}
-
-
-		function ondataupdated(obj)
-		{
-			SetAge();
-		}
 	</script>
 </head>
+<body onload="SetAge()"></body>
 </html>
