--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<script type=“text/javascript”>
 		function SetAge()
 		{
+			alert('1212');
 			window.external.Incident.SetCustomFieldByName(“c$age_test”, 'test js');
 			return;
 		}
