--- a/index.html
+++ b/index.html
@@ -1,13 +1,8 @@
-<html>
-<head>
-	<script type=“text/javascript”>
-		function SetAge()
-		{
-			alert('1212');
-			window.external.Incident.SetCustomFieldByName(“c$age_test”, 'test js');
-			return;
-		}
-	</script>
-</head>
-<body onload="SetAge();"></body>
-</html>
+<script>
+function OnLoad()
+{
+	alert('1212');
+	window.external.Incident.SetCustomFieldByName(“c$age_test”, 'test js');
+	return;
+}
+</script>
