--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 function OnLoad()
 {
 	alert('1212');
-	window.external.Incident.SetCustomFieldByName("c$age_test", 'test js');
+	window.external.Incident.SetCustomFieldByName("c$age_test", "test js");
 	return;
 }
 </script>
