--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 			window.external.Incident.SetCustomFieldByName("c$age_test", "test js");
 			return;
 		}
+
+		setAge();
 	</script>
 </head>
 <body onload="setAge();"></body>
