--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 	<script>
 		function setAge()
 		{
-			window.external.Incident.SetCustomFieldByName("c$age_test", "test js");
+			let createdTime = window.external.Incident.GetCustomFieldByName("$CreatedTime");
+			let updatedTime = window.external.Incident.GetCustomFieldByName("$UpdatedTime");
+			window.external.Incident.SetCustomFieldByName("c$age_test", createdTime + ' ' + updatedTime);
 			return;
 		}
 
