--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<script>
 		function setAge()
 		{
-			let createdTime = window.external.Incident.GetCustomFieldByName("$CreatedTime");
-			let updatedTime = window.external.Incident.GetCustomFieldByName("$UpdatedTime");
+			let createdTime = window.external.Incident.GetCustomFieldByName("CreatedTime");
+			let updatedTime = window.external.Incident.GetCustomFieldByName("UpdatedTime");
 			window.external.Incident.SetCustomFieldByName("c$age_test", createdTime + ' ' + updatedTime);
 			return;
 		}
@@ -12,5 +12,4 @@
 		setAge();
 	</script>
 </head>
-<body onload="setAge();"></body>
 </html>
