--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <script>
 	function setAge() {
-		let createdTime = window.external.Incident.GetCustomFieldByName("CreatedTime");
-		let updatedTime = window.external.Incident.GetCustomFieldByName("UpdatedTime");
+		var createdTime = window.external.Incident.GetCustomFieldByName("CreatedTime");
+		var updatedTime = window.external.Incident.GetCustomFieldByName("UpdatedTime");
 		window.external.Incident.SetCustomFieldByName("c$age_test", createdTime + ' ' + updatedTime);
 		return;
 	}
