--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <script>
 	function setAge() {
 		var createdTime = window.external.Incident.GetCustomFieldByName("CreatedTime");
+		console.log(createdTime);
 		var updatedTime = window.external.Incident.GetCustomFieldByName("UpdatedTime");
+		console.log(updatedTime);
 		window.external.Incident.SetCustomFieldByName(
-			"c$age_test", "test " + createdTime.toString() + " altceva " + updatedTime.toString()
+			"c$age_test", "test " + " altceva "
 		);
 		return;	
 	}
