--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <script>
 	function setAge() {
-		var subject1 = window.external.Incident.GetCustomFieldByName("Subject");
+		var subject1 = window.external.Incident.GetCustomFieldByName("c$Subject");
 		alert(subject1);
 
-		var subject2 = window.external.Incident.GetCustomFieldByName("Incident.Subject");
+		var subject2 = window.external.Incident.GetCustomFieldByName("$Subject");
 		alert(subject2);
 
 		var subject3 = window.external.Incident.GetCustomFieldByName("Incident$Subject");
 		alert(subject3);
 
-		var subject4 = window.external.Incident.GetFieldByName("Subject");
+		var subject4 = window.external.Incident.GetCustomFieldByName("c$start_date");
 		alert(subject4);
-
 
 		var createdTime = window.external.Incident.GetCustomFieldByName("CreatedTime");
 		var updatedTime = window.external.Incident.GetCustomFieldByName("UpdatedTime");
