--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 		var subject4 = window.external.Incident.GetCustomFieldByName("c$start_date");
 		alert(subject4);
 
+		var subject5 = window.external.Incident;
+		alert(subject5);
+
 		var createdTime = window.external.Incident.GetCustomFieldByName("CreatedTime");
 		var updatedTime = window.external.Incident.GetCustomFieldByName("UpdatedTime");
 
