--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <script>
 	function setAge() {
-		var subject5 = window.external.Incident.GetString("Subject");
+		var subject2 = window.external.Incident.GetFieldById("Subject");
+		alert(subject2);
+
+		var subject3 = window.external.Incident.Subject;
+		alert(subject3);
+
+		var subject4 = window.external.Incident.GetCustomFieldByName("Incident.Subject");
+		alert(subject4);
+
+		var subject5 = window.external.Incident.GetString("Incident.Subject");
 		alert(subject5);
 
 		var createdTime = window.external.Incident.GetCustomFieldByName("CreatedTime");
