--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <script>
 	function setAge() {
-		var createdTime = window.external.Incident.CreatedTime;
-		var updatedTime = window.external.Incident.UpdatedTime;
+		var createdTime = window.external.Incident.Created;
+		var updatedTime = window.external.Incident.Updated;
 
 		alert('Test 1');
 		alert(createdTime);
