--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         setAge();
     }
 
-    function oncancel() {
-        setAge();
+    window.onload = function(event) {
+    	setAge();
     }
 
     setAge();
