--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
         var createdTime = window.external.Incident.Created;
         var updatedTime = window.external.Incident.Updated;
 
+        alert(window.event);
+
         var lastSavedChange = null;
         if (typeof createdTime !== 'undefined') {
             lastSavedChange = createdTime;
@@ -59,6 +61,18 @@
     function ondataupdated(obj) {
         setAge();
     }
+
+    window.onpopstate = function(event) {
+        alert('111');
+    };
+
+    window.onbeforeunload = function(e) {
+        alert('2222');
+    };
+
+    window.unload(function() {
+        alert('33333');
+    });
     
     setAge();
 </script>
