--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         alert('2222');
     };
 
-    window.unload(function() {
+    window.onunload(function() {
         alert('33333');
     });
     
