--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <script>
-    window.external.Incident.GetCustomFieldByName("c$age_test").addEventListener(
+    
+    window.external.addEventListener(
         'change',
         function () {
             alert('@@@@@@');
