--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <script>
-    
+
+
     window.external.addEventListener(
-        'change',
+        'incident_last_update',
         function () {
             alert('@@@@@@');
         }
